<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/backdrop"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:id="@+id/backdrop"
        android:contentDescription="@string/backdrop"
        tools:src="@drawable/movie_backdrop_placeholder_w500"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_scroll_view">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop"
                android:background="@drawable/backdrop_gradient_bottom"
                android:id="@+id/backdrop_gradient"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/backdrop_gradient"
                android:background="@color/background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="@dimen/details_margin"
                    android:layout_marginStart="@dimen/details_margin"
                    android:layout_marginRight="@dimen/details_margin"
                    android:layout_marginEnd="@dimen/details_margin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/movie_title"
                    android:id="@+id/movie_title"
                    tools:text="Movie Title"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_title"
                    android:id="@+id/poster_panel">
                    <RelativeLayout
                        android:layout_width="@dimen/movie_poster_width"
                        android:layout_height="@dimen/movie_poster_height"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="@dimen/details_margin"
                        android:layout_marginStart="@dimen/details_margin"
                        android:layout_marginTop="@dimen/details_margin_small"
                        android:id="@+id/movie_poster_container">
                        <ImageView
                            android:layout_width="@dimen/movie_poster_width"
                            android:layout_height="@dimen/movie_poster_height"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"
                            android:id="@+id/movie_poster"
                            android:contentDescription="@string/movie_poster"
                            tools:src="@drawable/movie_poster_placeholder_w500"/>
                        <ImageView
                            android:id="@+id/poster_heart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="center"
                            android:src="@drawable/ic_heart"
                            android:visibility="gone"
                            android:contentDescription="@string/heart"
                            tools:visibility="gone" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/movie_poster_container"
                        android:layout_toRightOf="@id/movie_poster_container"
                        android:layout_marginLeft="@dimen/details_margin"
                        android:layout_marginStart="@dimen/details_margin"
                        android:layout_marginTop="@dimen/details_margin_small"
                        android:id="@+id/rating_container">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:padding="@dimen/details_margin_small"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/vote_average"
                            android:id="@+id/vote_average"
                            tools:background="@color/green_500"
                            tools:text="9.0"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/vote_average"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/out_of_10"
                            android:text="@string/out_of_10"
                            android:id="@+id/out_of_10"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/movie_poster_container"
                        android:layout_toRightOf="@id/movie_poster_container"
                        android:layout_marginLeft="@dimen/details_margin"
                        android:layout_marginStart="@dimen/details_margin"
                        android:layout_marginTop="@dimen/details_margin_small"
                        android:layout_below="@id/rating_container">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/details_header"
                            android:id="@+id/genre_header"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/genre_header"
                            android:textColor="@color/white"
                            android:textSize="@dimen/details_text"
                            android:id="@+id/genre"
                            tools:text="Comedy, Action"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@id/genre"
                            android:layout_marginTop="@dimen/details_margin_small"
                            android:text="@string/runtime"
                            android:textColor="@color/white"
                            android:textSize="@dimen/details_header"
                            android:id="@+id/runtime_header"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/runtime_header"
                            android:textColor="@color/white"
                            android:textSize="@dimen/details_text"
                            android:id="@+id/runtime"
                            tools:text="133"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/runtime"
                            android:layout_toEndOf="@id/runtime"
                            android:layout_alignBaseline="@id/runtime"
                            android:textColor="@color/white"
                            android:textSize="@dimen/details_text"
                            android:text="@string/runtime_measure"
                            tools:text="minutes"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/details_margin_small"
                        android:layout_toEndOf="@id/movie_poster_container"
                        android:layout_toRightOf="@id/movie_poster_container"
                        android:layout_marginLeft="@dimen/details_margin"
                        android:layout_marginStart="@dimen/details_margin"
                        android:layout_alignParentBottom="true"
                        android:id="@+id/action_icons">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:id="@+id/favorite_icon"
                        android:src="@drawable/ic_heart_border"
                        android:contentDescription="@string/heart"/>
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginLeft="@dimen/details_margin_small"
                        android:layout_marginStart="@dimen/details_margin_small"
                        android:layout_toEndOf="@id/favorite_icon"
                        android:layout_toRightOf="@id/favorite_icon"
                        android:id="@+id/share_icon"
                        android:src="@drawable/ic_share"
                        android:visibility="gone"
                        android:contentDescription="@string/share"/>
                    </RelativeLayout>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_margin"
                    android:layout_marginStart="@dimen/details_margin"
                    android:layout_marginRight="@dimen/details_margin"
                    android:layout_marginEnd="@dimen/details_margin"
                    android:layout_marginTop="@dimen/details_margin"
                    android:layout_below="@id/poster_panel"
                    android:text="@string/overview_header"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/overview_header"
                    android:id="@+id/overview_header"
                    tools:text="Overview"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/details_margin"
                    android:layout_marginStart="@dimen/details_margin"
                    android:layout_marginRight="@dimen/details_margin"
                    android:layout_marginEnd="@dimen/details_margin"
                    android:layout_below="@id/overview_header"
                    android:textColor="@android:color/white"
                    android:id="@+id/overview"
                    tools:text="Sample plot synopsis of a film."/>
                <ImageView
                    android:layout_width="@dimen/attribution_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/details_margin"
                    android:id="@+id/tmdb_attribution"
                    android:src="@drawable/tmdb_powered_by_rectangle_green"
                    android:contentDescription="@string/attribution" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>